c/src/test/resources/c/test/nec_bnc/valid/ex32-1000.ctrl
<controlFile>
  <sourceFile name="../ex32.c" id="1" />
  <run>
    <startPosition fileId="1" line="19" />
    <wayPoint fileId="1" line="21" >
      <function funcName="no" >
	<wayPoint fileId="1" line="16" />
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="22" >
      <function funcName="make_null" >
	<wayPoint fileId="1" line="7" >
	  <loop iterTimes="1000" />
	</wayPoint>
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="23" >
      <function funcName="make_null" >
	<wayPoint fileId="1" line="7" >
	  <loop iterTimes="1000" />
	</wayPoint>
      </function>
    </wayPoint>
    <endPosition fileId="1" line="25" />
  </run>
</controlFile>
