c/src/test/resources/c/test/nec_bnc/invalid/ex20-1.ctrl
<controlFile>
  <sourceFile name="../ex20.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <wayPoint fileId="1" line="8" />
    <wayPoint fileId="1" line="15" >
      <loop iterTimes="1" />
    </wayPoint>
    <wayPoint fileId="1" line="20" >
      <command>
	<cascadeFunction> cascade_check </cascadeFunction>
	<argument><![CDATA[
	valid(&a[j]) && valid(&a[i]) && valid(&a[b])
	]]>
	</argument>
      </command>
    </wayPoint>
    <endPosition fileId="1" line="28" />
  </run>
</controlFile>
